# Advent-Of-Code

./: .gitignore  README.md
2020/d1/julia/: day1.jl
2020/d1/python/: day1.py
2020/d10/python/: day10.py
2020/d11/julia/: day11.jl
2020/d12/python/: d12.py
2020/d2/python/: challenge1.py  day2.py
2020/d3/python/: day3.py
2020/d4/python/: day4.py
2020/d5/julia/: day5.jl
2020/d5/python/: day5.py
2020/d6/python/: day6.py
2020/d7/python/: day7.py
2020/d8/python/: day8.py
2020/d9/python/: day9.py
2021/day-1/: challenge.cr  challenge.hs  challenge.py  challenge.rs  challenge_cr  challenge_rs  challenge_rs_2
2021/day-2/: challenge.cr  challenge.py  challenge.rs  challenge_fun.py
2021/day-3/: challenge.py  crystal.cr
2021/day-5/: crystal.cr  crystal_it.cr
2022/day_1/src/: main.rs
2022/day_10/src/: cpu.rs  crt.rs  main.rs
2022/day_11/: Cargo.toml
2022/day_11/src/: checks.jl  keep_away.rs  main.rs  monkey.rs
2022/day_12/: Cargo.toml
2022/day_12/src/: height_map.rs  main.rs  point.rs
2022/day_13/: Cargo.toml
2022/day_13/src/: main.rs
2022/day_14/: Cargo.toml
2022/day_14/src/: finite_scan.rs  infinite_scan.rs  main.rs  scan.rs
2022/day_15/: Cargo.toml
2022/day_15/src/: bounding_box_iter.rs  coord.rs  main.rs  sensor.rs  t.rs
2022/day_16/: Cargo.toml
2022/day_16/src/: main.rs
2022/day_2/: Cargo.toml
2022/day_2/src/: game_result.rs  main.rs  moves.rs  part_one.rs  (+2 more)
2022/day_5/: Cargo.toml
2022/day_7/: Cargo.toml
2022/day_9/: Cargo.toml
d1/python/: challenge1.py  challenge2.py
d2/python/: challenge1.py  challenge2.py
(+15 files in other folders)
