[package]
name = "day_15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"

[profile.release]
lto = true
opt-level = 2
codegen-units = 1
strip = true

# Set the default for dependencies.
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = true
